--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "pdf"
-version = "0.1.0"
+name = "pdf-compressor"
+version = "0.1.1"
 edition = "2021"
 
 [dependencies]
@@ -8,3 +8,8 @@ flate2 = "1.0.24"
 image = "0.24.4"
 jpeg-encoder = "0.5.1"
 lopdf = "0.27.0"
+progress_bar = "1.0.3"
+
+[lib]
+name = "pdf_compressor"
+path = "./lib.rs"
