--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -10,6 +10,13 @@ jpeg-encoder = "0.5.1"
 lopdf = "0.27.0"
 progress_bar = { git = "https://github.com/brainwo/cli_progress_bar", branch = "action-mode" }
 
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = "0.2.83"
+
+[profile.release]
+lto = true
+
 [lib]
 name = "pdf_compressor"
 path = "./lib.rs"
+crate-type = ["lib", "cdylib"]
