--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pdf-compressor"
+name = "pdf-compressor-lib"
 version = "0.1.1"
 edition = "2021"
 
@@ -12,8 +12,13 @@ progress_bar = { git = "https://github.com/brainwo/cli_progress_bar", branch = "
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2.83"
+console_error_panic_hook = { version = "0.1.6", optional = true }
+wee_alloc = { version = "0.4.5", optional = true }
+
+[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
+wasm-bindgen-test = "0.3.13"
 
 [lib]
-name = "pdf_compressor"
+name = "pdf_compressor_lib"
 path = "./lib.rs"
-crate-type = ["lib", "cdylib"]
+crate-type = ["lib", "cdylib", "rlib"]
